KAFKA-19112:cleanup.policy shouldn't be empty